// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-router-pagination/pagination/standard <Standard /> With \`pageNumber\` and \`totalPages\` With \`spread\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="zero-page"
  >
    <a
      data-discover="true"
      href="/1"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        1
      </span>
    </a>
  </li>
  <li
    className="reverse-page"
  >
    <a
      data-discover="true"
      href="/3"
      onClick={[Function]}
    >
      <span
        className="reverse"
      >
        ‹
      </span>
    </a>
  </li>
  <li
    className="page"
  >
    <a
      data-discover="true"
      href="/4"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        4
      </span>
    </a>
  </li>
  <li
    className="current-page"
  >
    <a
      data-discover="true"
      href="/5"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        5
      </span>
    </a>
  </li>
  <li
    className="page"
  >
    <a
      data-discover="true"
      href="/6"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        6
      </span>
    </a>
  </li>
  <li
    className="forward-page"
  >
    <a
      data-discover="true"
      href="/7"
      onClick={[Function]}
    >
      <span
        className="forward"
      >
        ›
      </span>
    </a>
  </li>
  <li
    className="last-page"
  >
    <a
      data-discover="true"
      href="/9"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        9
      </span>
    </a>
  </li>
</ul>
`;

exports[`react-router-pagination/pagination/standard <Standard /> With \`pageNumber\` and \`totalPages\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="current-page"
  >
    <a
      data-discover="true"
      href="/1"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        1
      </span>
    </a>
  </li>
  <li
    className="last-page"
  >
    <a
      data-discover="true"
      href="/2"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        2
      </span>
    </a>
  </li>
</ul>
`;
